--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 ### General ###
 *.pptx
+fresh.bat
 
 ### R files ###
 .Rhistory
 *.RData
 *.R
+*.Rproj
 
 ### LaTeX files ###
 *.tex
@@ -21,3 +23,4 @@ Document/
 
 ### Miscelaneous ###
 .Rproj.user
+
