--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 *.pptx
 *.bat
 *.xlsx
+*.zip
+*.7z
 
 ### R files ###
 .Rhistory
@@ -20,8 +22,6 @@
 DataSummary.pdf
 DataSummaryJS.pdf
 ModelSummary*.pdf
-Document/
 
 ### Miscelaneous ###
 .Rproj.user
-
