--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ DataSummaryJS.pdf
 ModelSummary*.pdf
 DataSummary.tex
 TempImages
+
+### Omit this year until PDFs are final
 2023/
 
 ## Temp files ###
