Ignore and delete temporary knitr files

--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,13 @@
 
 ### Temporary (for this year) ###
 DataSummary.pdf
+DataSummary-knitr.pdf
 DataSummaryJS.pdf
 ModelSummary*.pdf
 DataSummary.tex
+DataSummary-knitr.tex
 TempImages
+DataSummary-knitr.rnw
 
 ### Omit this year until PDFs are final
 2023/
