Hold A10, HG, and WCVI for now

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ DataSummary-knitr.rnw
 
 ### Omit this year until PDFs are final
 2023/
+DataSummary.A10.2023.pdf
+DataSummary.HG.2023.pdf
+DataSummary.WCVI.2023.pdf
 
 ## Temp files ###
 DataSummary-concordance.tex
