--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ DataSummary.pdf
 DataSummary-knitr.pdf
 ModelSummary*.pdf
 DataSummary.tex
+DataSummary.xwm
 DataSummary-knitr.tex
 TempImages
 DataSummary-knitr.rnw
